<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_displayed_recipe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_size"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/recipe_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_displayed_recipe"
                >
                <include
                    layout="@layout/item_icon_with_text"
                    android:id="@+id/recipe_prepare_time"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <include
                    layout="@layout/item_icon_with_text"
                    android:id="@+id/recipe_cook_time"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/zero"
                    android:layout_weight="1"
                    app:layout_constraintStart_toEndOf="@id/recipe_prepare_time"
                    />

                <ImageView
                    android:id="@+id/recipe_difficulty"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_difficulty_beginner"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:layout_marginStart="@dimen/margin_title_large"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@id/recipe_icons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/recipe_play_button"
                tools:text="Pizza Margherita"
                />

            <ImageButton
                android:id="@+id/recipe_play_button"
                android:layout_width="@dimen/icon_size_cooking_mode"
                android:layout_height="@dimen/icon_size_cooking_mode"
                android:layout_marginStart="@dimen/margin_add_recipe_top"
                android:layout_marginBottom="@dimen/margin_add_recipe_top"
                android:layout_marginTop="@dimen/margin_add_recipe_top"
                android:layout_marginEnd="@dimen/margin_title_large"
                android:background="@drawable/ic_play_circle_outline_black_24dp"
                android:backgroundTint="@color/primaryColor"
                app:layout_constraintStart_toEndOf="@id/recipe_title"
                app:layout_constraintTop_toTopOf="@id/recipe_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/recipe_title"
                />

            <TextView
                android:id="@+id/recipe_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="@dimen/margin_add_recipe_top"
                android:layout_marginBottom="@dimen/margin_add_recipe_top"
                android:lines="1"
                android:ellipsize="end"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintTop_toBottomOf="@id/recipe_title"
                app:layout_constraintStart_toStartOf="@id/recipe_title"
                app:layout_constraintEnd_toEndOf="@id/recipe_title"
                tools:text="#Meat"
                />


            <TextView
                android:id="@+id/recipe_ingredients_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/recipe_ingredients_title"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_item_top"
                app:layout_constraintTop_toBottomOf="@id/recipe_type"
                app:layout_constraintStart_toStartOf="@id/recipe_title"
                app:layout_constraintEnd_toEndOf="@id/recipe_title"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"

                app:layout_constraintStart_toStartOf="@id/recipe_ingredients_text"
                app:layout_constraintEnd_toEndOf="@id/recipe_ingredients_text"
                app:layout_constraintTop_toBottomOf="@id/recipe_ingredients_text"
                />

            <TextView
                android:id="@+id/recipe_instructions_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/recipe_instructions_title"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_item_top"
                app:layout_constraintTop_toBottomOf="@id/recipe_ingredients"
                app:layout_constraintStart_toStartOf="@id/recipe_title"
                app:layout_constraintEnd_toEndOf="@id/recipe_title"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_instructions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"

                app:layout_constraintEnd_toEndOf="@id/recipe_instructions_text"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/recipe_instructions_text"
                app:layout_constraintTop_toBottomOf="@id/recipe_instructions_text" />

            <TextView
                android:id="@+id/recipe_images_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:text="@string/recipe_images_title"
                android:layout_marginTop="@dimen/margin_item_top"
                app:layout_constraintTop_toBottomOf="@id/recipe_instructions"
                app:layout_constraintStart_toStartOf="@id/recipe_title"
                app:layout_constraintEnd_toEndOf="@id/recipe_title"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="horizontal"
                android:scrollbarSize="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_images_text"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_list"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>