<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    needs always instead of ifRoom, so search icon does not disappear-->
    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_white"
        app:showAsAction="always"
        app:actionViewClass="android.widget.ImageButton" />
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"
        app:actionViewClass="android.widget.TextView" />
</menu>